contrast color fixed

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
 
   /* Box-shadow */
   --shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
+  --light-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.41);
 
   /* typography size */
   --ty-size-h1: 2.125rem; /* 34px */
@@ -97,7 +98,6 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* border-bottom: 1px solid var(--black-color); */
   position: fixed;
   background-color: var(--white-color);
   z-index: 10;
@@ -119,8 +119,6 @@ button {
   display: flex;
   position: relative;
   flex-direction: column;
-  /* justify-content: center;
-  align-items: center; */
   padding-top: var(--spacing-6);
 }
 
@@ -128,9 +126,6 @@ button {
 .selector-section {
   padding: var(--spacing-3);
   width: 100vw;
-  /* min-width: 300px; */
-  /* height: auto; */
-  /* border-right: 1px solid var(--black-color); */
   padding-top: var(--spacing-5);
 }
 
@@ -310,7 +305,6 @@ button {
   height: auto;
   display: flex;
   flex-direction: column;
-  /* padding-top: var(--spacing-5); */
 }
 
 .scales {
@@ -350,6 +344,10 @@ button {
   -ms-user-select: none;
   user-select: none;
   transition: var(--trans-3s);
+}
+
+body.dark .colors-div-base-propeties {
+  box-shadow: var(--light-shadow);
 }
 
 .canvas-container {
@@ -827,7 +825,7 @@ button {
   z-index: 0;
   transition: var(--trans-3s);
   border-radius: 10px;
-  border: 1px solid var(--b-color);
+  border: 1px solid var(--gray-border-color);
 }
 .radio-input label:hover::before {
   transition: var(--trans-3s);
@@ -855,7 +853,7 @@ button {
 
 .radio-input .label input[type="radio"] {
   background-color: var(--bhc-color);
-  border: 1px solid var(--b-color);
+  border: 1px solid var(--gray-border-color);
   appearance: none;
   width: 17px;
   height: 17px;
@@ -1064,7 +1062,8 @@ button {
 }
 
 .active-option {
-  background-color: var(--light-gray-color);
+  background-color: var(--bg-color);
+  color: var(--color);
 }
 
 .shades-container {
